# docs/swagger.json
@@ -1032,7 +1032,7 @@
                 }
             }
         },
-        "/cicd/service/publish/{id}": {
+        "/cicd/service/publish/{id}/{flag}": {
             "get": {
                 "description": "发布项目",
                 "produces": [
@@ -2657,6 +2657,10 @@
         "request.CicdDeploy": {
             "type": "object",
             "properties": {
+                "flag": {
+                    "description": "1本地2远程",
+                    "type": "integer"
+                },
                 "server_id": {
                     "type": "integer"
                 },
