# http/router/cicd.go
@@ -23,9 +23,11 @@ func InitCicdRouter(Router *gin.RouterGroup) {
 
 		CicdRouter.GET("publish/list", v1.CicdPublishList)
 
-		CicdRouter.GET("service/publish/:id", v1.CicdServicePublish)
+		CicdRouter.GET("service/publish/:id/:flag", v1.CicdServicePublish)
 
+		CicdRouter.GET("local/deploy/dir/list", v1.CicdLocalDeployDirList)
 
+		CicdRouter.GET("local/sync/target", v1.CicdLocalSyncTarget)
 
 	}
 }
